# trymix

./: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  EventHandling.cpp  EventHandling.h  EventParser.cpp  ProjectTree.cpp  ProjectTree.h  Projects_TreeItem.cpp  Projects_TreeItem.h  README.txt  ViewPortController.cpp  ViewPortController.h  config.cmake  config_omi.cmake  history.md  main.cpp  mainwindow.cpp  mainwindow.ui  omi_triang.qrc  omi_triang.rc  omi_triang_en_GB.ts  testScene.cpp  trymix.qrc  trymix.rc  trymix_en_GB.ts
BlurTests/: BlurTests.cpp  BlurTests.h  BlurTests_TreeItem.cpp  BlurTests_TreeItem.h  BlurTests_panel.ui  BoxBlur.cpp  BoxBlur.h  BoxBlur2.cpp  BoxBlur2.h  GaussBlurEngine.cpp  GaussBlurEngine.h  khronos_cl.hpp
CameraControl/: CameraControl_TreeItem.cpp  CameraControl_TreeItem.h  CameraControl_panel.ui
CommonComponents/: CentralWidget.cpp  CentralWidget.h  CentralWidget.ui  EventHandling.cpp  EventParser.cpp  EventParser.h  ImageTile.h  ProjectTree.cpp  ProjectTree.h  Projects_TreeItem.cpp  Projects_TreeItem.h  drawContext.cpp  drawContext.h  glhelper.cpp  glhelper.h  lights.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathstruct.cpp  mathstruct.h  testScene.h  toolspanel.cpp  toolspanel.h  viewctrl.cpp  viewctrl.h
MRFSegm/: MRFSegm.cpp  MRFSegm.h  MRFSegm_TreeItem.cpp  MRFSegm_TreeItem.h  MRFSegm_panel.ui
PolygonTests/: PolygonTest.h  PolygonTestConformingDelanay.cpp  PolygonTestConformingDelanay.h  PolygonTestConvexPartitioning.cpp  PolygonTestConvexPartitioning.h  PolygonTestMonotonePartitioning.cpp  PolygonTestMonotonePartitioning.h  PolygonTests_TreeItem.cpp  PolygonTests_TreeItem.h  PolygonTests_panel.ui
SFSBuilder/: ImageTile.cpp  ImageTile.h  SFSBuilder_TreeItem.cpp  SFSBuilder_TreeItem.h  SFSBuilder_panel.ui  dispview.cpp  dispview.h  editviewobj.cpp  editviewobj.h  eventhnd.h  glhelper.cpp  glhelper.h  imageplane.cpp  imageplane.h  lights.cpp  lights.h  lineqsol.cpp  lineqsol2.cpp  lineqsol2.h  mousectrl.cpp  mousectrl.h  normfromshade.h  savejpeg.cpp  shapefromshade.cpp  toolspanel.cpp  toolspanel.h  viewctrl.cpp  viewctrl.h
SFSBuilder/mathlib/mathutl/: meshandalg.h
ShaderMix/: ShaderMix_TreeItem.cpp  ShaderMix_TreeItem.h  ShaderMix_panel.ui
apputil/: ProcessAsServer.cpp  ProcessAsServer.h  ProcessAsServer_test.cpp  ProcessAsServer_test_sample.py  ProcessWithBiPipes.cpp  ProcessWithBiPipes.h  base64encoder.cpp  base64encoder.h  compatibility.cpp  compatibility.h  fillChessBoard.cpp  fillChessBoard.h  parallelWithBarrier.h  serializer.cpp  serializerV2.cpp  serializerV2.h  serializerV2test.h  storagestreamindexedbinary.cpp  storagestreamindexedbinary.h  storagestreamjson.cpp  storagestreamjson.h  storagestreamsimplexml.cpp  storagestreamsimplexml.h
cmake/: this_project_utils.cmake
mathlib/lapackcpp/: leastsquare.cpp
mathlib/mathutl/: imageandfft.h  meshandalg.h  mymath.h
mathlib/matpro/: matrix.cpp  matrix.h
